--- a/index.html
+++ b/index.html
@@ -135,12 +135,12 @@ is_sports_car(X) :- sports_car(X).
     session.consult(knowledge);
 
     const animalAnimations = {
-      lion: '<img src="https://images.ecency.com/p/FUkUE5bzkAZT3HzV5tJDiU2ik81PCd4JCyhWnRcDN8XJsVFY3UNB8DCcF6FBnrG9mHUsoB7296D4omrF75j3S9mNdXjzd7j2xiKroEuvcf5umt9qDsRKoeDp3kBezDQscLbJuZaCqh8sgthRd5GukLgMiH16xWrcxhxh.png?format=match&mode=fit" class="animal-gif" alt="Лъв анимация" />',
-      elephant: '<img src="https://media.giphy.com/media/2v170e71aanfi/giphy.gif" class="animal-gif" alt="Слон анимация" />',
-      tiger: '<img src="https://media.giphy.com/media/fANhQpcPGr2hO/giphy.gif" class="animal-gif" alt="Тигър анимация" />',
-      crocodile: '<img src="https://media.giphy.com/media/vFKqnCdLPNOKc/giphy.gif" class="animal-gif" alt="Крокодил анимация" />',
-      kangaroo: '<img src="https://media.giphy.com/media/l0MYEw7nYdf6r62aI/giphy.gif" class="animal-gif" alt="Кенгуру анимация" />',
-      owl: '<img src="https://media.giphy.com/media/3ohs4B9Zz54HXGvoYs/giphy.gif" class="animal-gif" alt="Бухал анимация" />'
+     tesla  '<img src="https://images.ecency.com/p/FUkUE5bzkAZT3HzV5tJDiU2ik81PCd4JCyhWnRcDN8XJsVFY3UNB8DCcF6FBnrG9mHUsoB7296D4omrF75j3S9mNdXjzd7j2xiKroEuvcf5umt9qDsRKoeDp3kBezDQscLbJuZaCqh8sgthRd5GukLgMiH16xWrcxhxh.png?format=match&mode=fit" class="animal-gif" alt="Лъв анимация" />',
+     ford: '<https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExMTY1NGIwN2Uzd2p3aXFtNmx6dWFqenlsNWVhaXk5eXVvN2I3a25leCZlcD12MV9naWZzX3NlYXJjaCZjdD1n/WMBy5HmEFyZ2g/giphy.gif" alt />',
+     lamborghini: '<https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExczQ4dm52aW9remd1cXZzamRvaWVyNWlweHB1OHpheGcyYnNtb2JubSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/jePjAdmCogqys/giphy.gif />',
+     toyota: '<https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExMHN5djQ2OTFmZm1xMGxlempvNXA1Z3VkMDM4bHhxeXkxazQ2bnBncSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/vvgmGHOaGjkIStWJpy/giphy.gif />',
+     porsche: '<https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExcXJ3YmkzZzhwdWFpam9kemxxODU3NG54NGRxdnF2a3p2dzlpbWU2MiZlcD12MV9naWZzX3NlYXJjaCZjdD1n/UtnVtdk5xyvLTdTIIo/giphy.gif />',
+     chevrolete: '<https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOXByZGRrdHZycjNsOWdrbHIzNGNlZ3MwZDc4Y3l5aWsyZWw5aGFtdyZlcD12MV9naWZzX3NlYXJjaCZjdD1n/wd70hutJAQuY9nLjNe/giphy.gif/>'
     };
 
     function runProlog() {
